--- a/packages/vue-layout-primitives.v-stack/package.json
+++ b/packages/vue-layout-primitives.v-stack/package.json
@@ -6,6 +6,7 @@
     "email": "phillipcurl@gmail.com",
     "github": "phillipcurl"
   },
+  "version": "0.0.4",
   "license": "MIT",
   "homepage": "https://www.npmjs.com/package/vue-layout-primitives.v-stack",
   "repository": {
