--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,7 @@
 {
-	"version": "0.0.4",
-	"packages": ["packages/*"],
+	"version": "0.0.5",
+	"packages": [
+		"packages/*"
+	],
 	"npmClient": "yarn"
 }
