--- a/lerna.json
+++ b/lerna.json
@@ -1,7 +1,5 @@
 {
-	"version": "0.0.5",
-	"packages": [
-		"packages/*"
-	],
+	"version": "0.0.6",
+	"packages": ["packages/*"],
 	"npmClient": "yarn"
 }
